[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ddf_common"
version = "prototype"
authors = [
    { name="Juan Miguel Ogarrio", email="omj@google.com" },
]
description = "Helper library for DDF."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tnc-br/ddf_common"
"Bug Tracker" = "https://github.com/tnc-br/ddf_common/issues"
